# GDRP-CCPA-Compilance-Checker

./: .replit  .vercelignore  app.py  pyproject.toml  requirements.txt  vercel.json
controllers/: compliance_controller.py
models/: compliance_model.py
services/: openai_service.py
