[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "lxml>=6.0.2",
    "numpy>=1.20.0",
    "openai>=2.7.1",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.50.0",
    "trafilatura>=2.0.0",
]

[tool.setuptools]
packages = ["models", "database", "services", "controllers"]
